added the year and price part

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <div id="buttons">
       <button class="btn" id="mileage-sort">Sort By Mileage</button>
       <button class="btn" id="make-sort">Sort By Make</button>
+      <button class="btn" id="year-sort">Sort By Year</button>
+      <button class="btn" id="price-sort">Sort By Price</button>
     </div>
     <table id="results">
       <thead>
